--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "ionicons": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.3",
+    "node-localstorage": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^5.3.4",
